@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,26 +21,28 @@
  * questions.
  */
 
-import java.io.IOException;
+import java.net.InetAddress;
+import java.net.InetSocketAddress;
 import java.net.ServerSocket;
 import java.net.URI;
-import jdk.incubator.http.HttpClient;
-import jdk.incubator.http.HttpRequest;
-import jdk.incubator.http.HttpResponse;
-import jdk.incubator.http.HttpTimeoutException;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.net.http.HttpResponse.BodyHandlers;
+import java.net.http.HttpTimeoutException;
 import java.time.Duration;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.LinkedBlockingQueue;
 import static java.lang.System.out;
-import static jdk.incubator.http.HttpResponse.BodyHandler.discard;
 
 /**
  * @test
  * @bug 8178147
+ * @modules java.net.http/jdk.internal.net.http.common
  * @summary Ensures that small timeouts do not cause hangs due to race conditions
- * @run main/othervm SmallTimeout
+ * @run main/othervm -Djdk.internal.httpclient.debug=true SmallTimeout
  */
 
 // To enable logging use. Not enabled by default as it changes the dynamics
@@ -52,21 +54,45 @@ public class SmallTimeout {
     static int[] TIMEOUTS = {2, 1, 3, 2, 100, 1};
 
     // A queue for placing timed out requests so that their order can be checked.
-    static LinkedBlockingQueue<HttpRequest> queue = new LinkedBlockingQueue<>();
+    static LinkedBlockingQueue<HttpResult> queue = new LinkedBlockingQueue<>();
+
+    static final class HttpResult {
+         final HttpRequest request;
+         final Throwable   failed;
+         HttpResult(HttpRequest request, Throwable   failed) {
+             this.request = request;
+             this.failed = failed;
+         }
+
+         static HttpResult of(HttpRequest request) {
+             return new HttpResult(request, null);
+         }
+
+         static HttpResult of(HttpRequest request, Throwable t) {
+             return new HttpResult(request, t);
+         }
+
+    }
 
     static volatile boolean error;
 
     public static void main(String[] args) throws Exception {
         HttpClient client = HttpClient.newHttpClient();
+        ReferenceTracker.INSTANCE.track(client);
 
-        try (ServerSocket ss = new ServerSocket(0, 20)) {
+        Throwable failed = null;
+        try (ServerSocket ss = new ServerSocket()) {
+            ss.setReuseAddress(false);
+            ss.bind(new InetSocketAddress(InetAddress.getLoopbackAddress(), 0));
             int port = ss.getLocalPort();
-            URI uri = new URI("http://127.0.0.1:" + port + "/");
+            URI u = new URI("http://localhost:" + port + "/");
 
             HttpRequest[] requests = new HttpRequest[TIMEOUTS.length];
 
             out.println("--- TESTING Async");
             for (int i = 0; i < TIMEOUTS.length; i++) {
+                final int n = i;
+                URI uri = new URI(u.toString() + "/r" + n);
                 requests[i] = HttpRequest.newBuilder(uri)
                                          .timeout(Duration.ofMillis(TIMEOUTS[i]))
                                          .GET()
@@ -74,27 +100,32 @@ public class SmallTimeout {
 
                 final HttpRequest req = requests[i];
                 CompletableFuture<HttpResponse<Object>> response = client
-                    .sendAsync(req, discard(null))
+                    .sendAsync(req, BodyHandlers.replacing(null))
                     .whenComplete((HttpResponse<Object> r, Throwable t) -> {
+                        Throwable cause = null;
                         if (r != null) {
-                            out.println("Unexpected response: " + r);
+                            out.println("Unexpected response for r" + n + ": " + r);
+                            cause = new RuntimeException("Unexpected response for r" + n);
                             error = true;
                         }
                         if (t != null) {
                             if (!(t.getCause() instanceof HttpTimeoutException)) {
-                                out.println("Wrong exception type:" + t.toString());
+                                out.println("Wrong exception type for r" + n + ":" + t.toString());
                                 Throwable c = t.getCause() == null ? t : t.getCause();
                                 c.printStackTrace();
+                                cause = c;
                                 error = true;
                             } else {
-                                out.println("Caught expected timeout: " + t.getCause());
+                                out.println("Caught expected timeout for r" + n +": " + t.getCause());
                             }
                         }
                         if (t == null && r == null) {
-                            out.println("Both response and throwable are null!");
+                            out.println("Both response and throwable are null for r" + n + "!");
+                            cause = new RuntimeException("Both response and throwable are null for r"
+                                    + n + "!");
                             error = true;
                         }
-                        queue.add(req);
+                        queue.add(HttpResult.of(req,cause));
                     });
             }
             System.out.println("All requests submitted. Waiting ...");
@@ -106,11 +137,14 @@ public class SmallTimeout {
 
             // Repeat blocking in separate threads. Use queue to wait.
             out.println("--- TESTING Sync");
+            System.err.println("================= TESTING Sync =====================");
 
             // For running blocking response tasks
             ExecutorService executor = Executors.newCachedThreadPool();
 
             for (int i = 0; i < TIMEOUTS.length; i++) {
+                final int n = i;
+                URI uri = new URI(u.toString()+"/sync/r" + n);
                 requests[i] = HttpRequest.newBuilder(uri)
                                          .timeout(Duration.ofMillis(TIMEOUTS[i]))
                                          .GET()
@@ -118,15 +152,20 @@ public class SmallTimeout {
 
                 final HttpRequest req = requests[i];
                 executor.execute(() -> {
+                    Throwable cause = null;
                     try {
-                        client.send(req, discard(null));
+                        HttpResponse<?> r = client.send(req, BodyHandlers.replacing(null));
+                        out.println("Unexpected success for r" + n +": " + r);
                     } catch (HttpTimeoutException e) {
-                        out.println("Caught expected timeout: " + e);
-                        queue.offer(req);
-                    } catch (IOException | InterruptedException ee) {
+                        out.println("Caught expected timeout for r" + n +": " + e);
+                    } catch (Throwable ee) {
                         Throwable c = ee.getCause() == null ? ee : ee.getCause();
+                        out.println("Unexpected exception for r" + n + ": " + c);
                         c.printStackTrace();
+                        cause = c;
                         error = true;
+                    } finally {
+                        queue.offer(HttpResult.of(req, cause));
                     }
                 });
             }
@@ -139,18 +178,38 @@ public class SmallTimeout {
             if (error)
                 throw new RuntimeException("Failed. Check output");
 
+        } catch (Throwable t) {
+            failed = t;
+            throw t;
         } finally {
-            ((ExecutorService) client.executor()).shutdownNow();
+            try {
+                Thread.sleep(100);
+            } catch (InterruptedException t) {
+                // ignore;
+            }
+            AssertionError trackFailed = ReferenceTracker.INSTANCE.check(500);
+            if (trackFailed != null) {
+                if (failed != null) {
+                    failed.addSuppressed(trackFailed);
+                    if (failed instanceof Exception) throw (Exception) failed;
+                    if (failed instanceof Error) throw (Exception) failed;
+                }
+                throw trackFailed;
+            }
         }
     }
 
     static void checkReturn(HttpRequest[] requests) throws InterruptedException {
         // wait for exceptions and check order
+        boolean ok = true;
         for (int j = 0; j < TIMEOUTS.length; j++) {
-            HttpRequest req = queue.take();
-            out.println("Got request from queue " + req + ", order: " + getRequest(req, requests));
+            HttpResult res = queue.take();
+            HttpRequest req = res.request;
+            out.println("Got request from queue " + req + ", order: " + getRequest(req, requests)
+                         + (res.failed == null ? "" : " failed: " + res.failed));
+            ok = ok && res.failed == null;
         }
-        out.println("Return ok");
+        out.println("Return " + (ok ? "ok" : "nok"));
     }
 
     /** Returns the index of the request in the array. */
